--- a/src/stories/atomic-components/misc/footer.css
+++ b/src/stories/atomic-components/misc/footer.css
@@ -3,6 +3,8 @@
 @layer components {
   .footer {
     @apply flex items-center justify-between rounded-t-lg px-4 py-2.5 sm:p-6;
+  }
+  [data-theme="light"] .footer {
     border-top: 4px solid var(--light-accent);
     background-color: var(--dark-background);
   }
@@ -11,18 +13,16 @@
     @apply h-2 sm:h-4;
   }
 
-  .footer span {
+  [data-theme="light"] .footer span {
     color: var(--dark-text);
   }
 
-  @media (prefers-color-scheme: dark) {
-    .footer {
-      border-top: 4px solid var(--dark-accent);
-      background-color: var(--light-background);
-    }
+  [data-theme="dark"] .footer {
+    border-top: 4px solid var(--dark-accent);
+    background-color: var(--light-background);
+  }
 
-    .footer span {
-      color: var(--light-text);
-    }
+  [data-theme="dark"] .footer span {
+    color: var(--light-text);
   }
 }
