--- a/src/stories/atomic-components/misc/footer.css
+++ b/src/stories/atomic-components/misc/footer.css
@@ -4,6 +4,7 @@
   .footer {
     @apply flex items-center justify-between rounded-t-lg px-4 py-2.5 sm:p-6;
   }
+  .footer,
   [data-theme="light"] .footer {
     border-top: 4px solid var(--light-accent);
     background-color: var(--dark-background);
@@ -13,10 +14,21 @@
     @apply h-2 sm:h-4;
   }
 
+  .footer,
   [data-theme="light"] .footer span {
     color: var(--dark-text);
   }
 
+  @media (prefers-color-scheme: dark) {
+    .footer {
+      border-top: 4px solid var(--dark-accent);
+      background-color: var(--light-background);
+    }
+
+    .footer span {
+      color: var(--light-text);
+    }
+  }
   [data-theme="dark"] .footer {
     border-top: 4px solid var(--dark-accent);
     background-color: var(--light-background);
